[gd_scene load_steps=3 format=3 uid="uid://5nwe5eauf7bt"]

[ext_resource type="Script" path="res://scenes/UI/save_box.gd" id="1_4pxr4"]
[ext_resource type="PackedScene" uid="uid://dypo0m4080kh3" path="res://scenes/UI/sound_button.tscn" id="1_f74jf"]

[node name="SaveBox" type="PanelContainer"]
custom_minimum_size = Vector2(100, 80)
mouse_filter = 2
script = ExtResource("1_4pxr4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="SaveHeader" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOtlineLabel"
text = "Save slot #1"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="SaveSlot" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOtlineLabel"
text = "Player no:1
"
horizontal_alignment = 1

[node name="SaveBoxButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ChooseButton" parent="VBoxContainer/SaveBoxButtonContainer" instance=ExtResource("1_f74jf")]
layout_mode = 2
disabled = true
text = "Choose"
alignment = 0

[node name="DeleteButton" parent="VBoxContainer/SaveBoxButtonContainer" instance=ExtResource("1_f74jf")]
layout_mode = 2
size_flags_horizontal = 10
text = "Delete"
alignment = 2
